--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 												<ul class="link-list">
 													<li>PhD Student</li>
 												    <ul class="link-list-in">
-													    <li><a href="#">Dapibus sed mattis blandit</a></li>
+													    <li><a href="#">Dept. of Intelligent Systems Engineering</a></li>
+													    <li><a href="#">Luddy School of Informatics, Computing, and Engineering</a></li>
+													    <li><a href="#">Indiana University</a></li>
+                                                    </ul>
+													<li>Research Assistant</li>
+												    <ul class="link-list-in">
+													    <li><a href="#">Signals & Artificial Intelligence Group in Engineering (SAIGE)</a></li>
                                                     </ul>
 												</ul>
 											</div>
@@ -78,7 +84,7 @@
                                         Applied scientist internship offer accepted at Amazon Lab126, 2020 Summer.
                                         </li>
                                         <li>
-                                        Our paper, Boosted Locality Sensitive Hashing, has been accepted to ICASSP 2020.
+                                        Paper accepted to ICASSP 2020.
                                         </li>
                                         <li>
                                         Interned at Qualcomm, 2019 Summer. 
