--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2>Affiliation</h2>
 									<div>
 										<div class="row">
-											<div class="col-6 col-12-small">
+											<div class="col-6 col-12-medium">
 												<ul class="link-list">
 													<li>PhD Student</li>
 												    <ul class="link-list-in">
