--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 									<h2>Affiliation</h2>
 									<div>
 										<div class="row">
-											<div class="col-6 col-12-medium">
+											<div class="col-4 col-12-medium">
 												<ul class="link-list">
 													<li>PhD Student</li>
-												    <ul class="link-list-in">
+												    <ul class="link-list-news">
 													    <li><a href="#">Dept. of Intelligent Systems Engineering</a></li>
 													    <li><a href="#">Luddy School of Informatics, Computing, and Engineering</a></li>
 													    <li><a href="#">Indiana University</a></li>
                                                     </ul>
 													<li>Research Assistant</li>
-												    <ul class="link-list-in">
+												    <ul class="link-list-news">
 													    <li><a href="#">Signals & Artificial Intelligence Group in Engineering (SAIGE)</a></li>
                                                     </ul>
 												</ul>
