Fixing margins at Affiliations

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 									<h2>News</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                        Applied scientist internship offer accepted at Amazon Lab126, 2020 Summer.
+                                        Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
                                         </li>
                                         <li>
-                                        Paper accepted to ICASSP 2020.
+                                        Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020.
                                         </li>
                                         <li>
-                                        Interned at Qualcomm, 2019 Summer. 
+                                        Interned at Qualcomm, 2019 Summer 2019. Worked on nonlinear echo cancellation.
                                         </li>
                                         <li>
-                                        Attended ICASSP 2019 in Brighton, UK. Presented on Binary RNNs.
+                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks.
                                         </li>
                                     </ul>
 								</section>
