Adding CV PDF to homepage

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 												    <ul class="link-list-news">
 													    <li><a href="#">Signals & Artificial Intelligence Group in Engineering (SAIGE)</a></li>
                                                     </ul>
+										            <li>
+                                                        <a href="#" class="button">CV (PDF)</a>
+                                                        </a>
 												</ul>
 											</div>
 										</div>
