Indenting the CV button

--- a/index.html
+++ b/index.html
@@ -68,10 +68,14 @@
 												    <ul class="link-list-news">
 													    <li><a href="#">Signals & Artificial Intelligence Group in Engineering (SAIGE)</a></li>
                                                     </ul>
+												</ul>
+
+												<ul class="link-list-cv">
 										            <li>
                                                         <a href="#" class="button">CV (PDF)</a>
                                                         </a>
-												</ul>
+                                                    </li>
+                                                </ul>
 											</div>
 										</div>
 									</div>
