Logo added for github and google scholar

--- a/index.html
+++ b/index.html
@@ -113,13 +113,10 @@
 						<div class="row">
 							<div class="col-4 col-12-medium">
 								<section>
-									<h2>Something of interest</h2>
-									<p>Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
-									Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet
-									mollis justo facilisis quis. Sed sagittis mauris amet tellus gravida
-									lorem ipsum dolor sit blandit.</p>
 									<footer class="controls">
 										<a href="#" class="button">Oh, please continue ....</a>
+                                        <a href="https://scholar.google.com/citations?user=F31Tky0AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+                                        <a href="https://github.com/sunwookimiub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
 									</footer>
 								</section>
 
