Re-editting footer icons

--- a/index.html
+++ b/index.html
@@ -114,8 +114,13 @@
 							<div class="col-4 col-12-medium">
 								<section>
 									<footer class="controls">
+                                        <a class ="icon fa-linkedin" href="https://www.linkedin.com/in/sunwookimiub">
+                                            <span class="label">Linkedin</span>
+                                        </a>
+                                        <!--
                                         <a href="https://scholar.google.com/citations?user=F31Tky0AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
                                         <a href="https://github.com/sunwookimiub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                                        -->
 									</footer>
 								</section>
 
