Footer my name added

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
 									<h1><a href="index.html" id="logo">Sunwoo Kim</a></h1>
 									<nav id="nav">
 										<a href="index.html" class="current-page-item">Homepage</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
+										<!-- 
+                                            <a href="twocolumn1.html">Two Column #1</a>
+                                        -->
+										<a href="publications.html">Publications</a>
+										<a href="cv.html">CV</a>
+										<!-- 
 										<a href="onecolumn.html">One Column</a>
 										<a href="threecolumn.html">Three Column</a>
+                                        -->
 									</nav>
 								</header>
 
@@ -130,7 +135,7 @@
 							<div class="col-12">
 
 								<div id="copyright">
-									&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+									&copy; Sunwoo Kim. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
 								</div>
 
 							</div>
