Trying LinkedIn logo again

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div class="col-12">
 								<div id="copyright">
                                     <a class ="icon fa-linkedin" href="https://www.linkedin.com/in/sunwookimiub">
-                                        <span class="label">Linkedin</span>
+                                        <i class="fa fa-linkedin fa-fw"></i>
                                     </a>
                                         <!--
                                         <a href="https://scholar.google.com/citations?user=F31Tky0AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
