--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
 						<div class="row">
 							<div class="col-12">
 								<div id="copyright">
-                                    <a class ="icon fa-linkedin" href="https://www.linkedin.com/in/sunwookimiub">
+                                    <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                         <i class="fa fa-linkedin fa-fw"></i>
+                                        LinkedIn
                                     </a>
                                         <!--
                                         <a href="https://scholar.google.com/citations?user=F31Tky0AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
