--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -117,10 +118,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-12">
+                                <a href="https://www.linkedin.com/in/kai-zhen-01b7b5103/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+
+                                        <!--
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i class="fa fa-linkedin fa-fw"></i>
                                     LinkedIn
                                 </a>
+                                        -->
                                         <!--
                                         <a href="https://scholar.google.com/citations?user=F31Tky0AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
                                         <a href="https://github.com/sunwookimiub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
