--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-12">
-                                <a href="https://www.linkedin.com/in/kai-zhen-01b7b5103/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+                                <i style="font-size:24px" class="fa">&#xf08c;</i>
 
                                         <!--
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
