Google Scholar Added

--- a/index.html
+++ b/index.html
@@ -119,17 +119,11 @@
 						<div class="row">
 							<div class="col-12">
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
-                                    <i style="font-size:24px" class="fa">&#xf08c;</i>
+                                    <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
-
-                                        <!--
-                                    <i class="fa fa-linkedin fa-fw"></i>
-                                    LinkedIn
-                                        -->
-                                        <!--
-                                        <a href="https://scholar.google.com/citations?user=F31Tky0AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
-                                        <a href="https://github.com/sunwookimiub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                                        -->
+                                <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
+                                    <i style="font-size:48px" class="fa">&#xf0d4;</i>
+                                </a>
 							</div>
 						</div>
 						<div class="row">
