--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
-                                <a style="padding-left:25px;" href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
+                                <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
                                     <i style="font-size:48px" class="fa">&#xf0d4;</i>
                                 </a>
 							</div>
