--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-12">
-                                <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
+                                <a style="text-align: center;" href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
                                 <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
