--- a/index.html
+++ b/index.html
@@ -118,12 +118,16 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-12">
-                                <a style="text-align: center;" href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
+								<div id="copyright">
+                                <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
+                                </div>
+                                <!--
                                 <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
                                     <i style="font-size:48px" class="fa">&#xf0d4;</i>
                                 </a>
+                                -->
 							</div>
 						</div>
 						<div class="row">
