--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-12">
-								<div id="copyright">
+								<div id="icon">
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
