--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
                                 </div>
-                                <!--
+								<div id="icon">
                                 <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
                                     <i style="font-size:48px" class="fa">&#xf0d4;</i>
                                 </a>
-                                -->
+                                </div>
 							</div>
 						</div>
 						<div class="row">
