--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
-                                <a style="padding-left: 2cm" href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
+                                <a style="padding-left: .2cm" href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
                                     <i style="font-size:48px" class="fa">&#xf0d4;</i>
                                 </a>
                                 </div>
