--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 												<ul class="link-list">
 													<li>PhD Student</li>
 												    <ul class="link-list-news">
-													    <li><a href="#">Dept. of Intelligent Systems Engineering</a></li>
-													    <li><a href="#">Luddy School of Informatics, Computing, and Engineering</a></li>
-													    <li><a href="#">Indiana University</a></li>
+													    <li><a href="https://engineering.indiana.edu/">Dept. of Intelligent Systems Engineering</a></li>
+													    <li><a href="https://luddy.indiana.edu/">Luddy School of Informatics, Computing, and Engineering</a></li>
+													    <li><a href="https://www.indiana.edu/">Indiana University</a></li>
                                                     </ul>
 													<li>Research Assistant</li>
 												    <ul class="link-list-news">
-													    <li><a href="#">Signals & Artificial Intelligence Group in Engineering (SAIGE)</a></li>
+													    <li><a href="https://saige.sice.indiana.edu/">Signals & Artificial Intelligence Group in Engineering (SAIGE)</a></li>
                                                     </ul>
 												</ul>
 
