--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 												<ul class="link-list-cv">
 										            <li>
-                                                        <a href="#" class="button">CV (PDF)</a>
+                                                        <a href="Sunwoo_Kim_Resume.pdf" class="button">CV (PDF)</a>
                                                         </a>
                                                     </li>
                                                 </ul>
