--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<div class="row">
 											<div class="col-8 col-12-medium">
 												<ul class="link-list">
-													<li>PhD Student</li>
+													<li>PhD Candidate</li>
 												    <ul class="link-list-news">
 													    <li><a href="https://engineering.indiana.edu/">Dept. of Intelligent Systems Engineering</a></li>
 													    <li><a href="https://luddy.indiana.edu/">Luddy School of Informatics, Computing, and Engineering</a></li>
@@ -97,7 +97,7 @@
                                         Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
                                         </li>
                                         <li>
-                                        Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020.
+                                        Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
                                         </li>
                                         <li>
                                         Interned at Qualcomm, 2019 Summer 2019. Worked on nonlinear echo cancellation.
