--- a/publications.html
+++ b/publications.html
@@ -45,16 +45,10 @@
 									<h2>Publications</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                        Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
+                                            <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019.
                                         </li>
                                         <li>
-                                        Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
-                                        </li>
-                                        <li>
-                                        Interned at Qualcomm, 2019 Summer 2019. Worked on nonlinear echo cancellation.
-                                        </li>
-                                        <li>
-                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks.
+                                            <u>Sunwoo Kim</u>, Haici Yang, Minje Kim, "<a href="https://ieeexplore.ieee.org/document/9053052">Boosted Locality Sensitive Hashing: Discriminative Binary Codes For Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Barcelona, Spain, May 4-8, 2020.    
                                         </li>
                                     </ul>
 								</section>
