--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,8 @@
 
 								<section>
 									<h2>Publications</h2>
-                                    <ul class="link-list-news">
+                                    <ul><!-- class="link-list-news">
+                                    -->
                                         <li>
                                             <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019.
                                         </li>
