--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
                                         <li>
                                             <u>Sunwoo Kim</u>, Haici Yang, Minje Kim, "<a href="https://ieeexplore.ieee.org/document/9053052">Boosted Locality Sensitive Hashing: Discriminative Binary Codes For Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Barcelona, Spain, May 4-8, 2020.    
 
-                                            <p><b>Nominated as the Best Student Paper</b></p>
+                                            <p><strong>[Nominated as the Best Student Paper]</strong></p>
                                         </li>
                                     </ul>
 								</section>
