--- a/cv.html
+++ b/cv.html
@@ -25,8 +25,8 @@
 									<h1><a href="index.html" id="logo">Sunwoo Kim</a></h1>
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="publications.html" class="current-page-item">Publications</a>
-										<a href="cv.html">CV</a>
+										<a href="publications.html">Publications</a>
+										<a href="cv.html" class="current-page-             item">CV</a>
 									</nav>
 								</header>
 
@@ -37,12 +37,18 @@
 
 			<!-- Main -->
 				<div id="main">
+                    <ul class="link-list-cv">
+                        <li>
+                            <a href="Sunwoo_Kim_Resume.pdf" class="button">CV (PDF)</a>
+                            </a>
+                        </li>
+                    </ul>
 					<div class="container">
 						<div class="row main-row">
 							<div class="col-12">
 
 								<section>
-									<h2>Publications</h2>
+									<h2>Positions Held</h2>
                                     <ul class="link-list-news">
                                         <li>
                                             <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
