--- a/cv.html
+++ b/cv.html
@@ -51,6 +51,9 @@
 									<h2>Positions Held</h2>
                                     <ul class="link-list-news">
                                         <li>
+											<a href="#">
+                                                <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
+                                            </a>
                                             <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
                                         </li>
                                         <li>
