--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
 											<a href="#">
                                                 <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
                                             </a>
-                                            <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
+                                            <a href="https://www.indiana.edu/">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Haici Yang, Minje Kim, "<a href="https://ieeexplore.ieee.org/document/9053052">Boosted Locality Sensitive Hashing: Discriminative Binary Codes For Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Barcelona, Spain, May 4-8, 2020. [<a href="https://saige.sice.indiana.edu/research-projects/bwss-blsh/">Demo</a>, <a href="https://github.com/sunwookimiub/BLSH">Code</a>]
