--- a/cv.html
+++ b/cv.html
@@ -38,6 +38,11 @@
 			<!-- Main -->
 				<div id="main">
 					<div class="container">
+                        <div class="row">
+                            <div class="3u" align=center">
+                                <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
+                            </div>
+                        </div>
 						<div class="row main-row">
 							<div class="col-12">
 
@@ -51,9 +56,6 @@
 									<h2>Positions Held</h2>
                                     <ul class="link-list-news">
                                         <li>
-											<a href="#">
-                                                <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
-                                            </a>
                                             <a href="https://www.indiana.edu/">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
                                         </li>
                                         <li>
