--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,16 @@
                             <div class="3u" align=center">
                                 <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
                             </div>
+                            <div class="9u">
+                                    <ul class="link-list-news">
+                                        <li>
+                                            Hi
+                                        </li>
+                                    </ul>
+                            </div>
+
                         </div>
+
 						<div class="row main-row">
 							<div class="col-12">
 
