--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 												<ul class="link-list-cv">
 										            <li>
-                                                        <a href="Sunwoo_Kim_Resume.pdf" class="button">CV (PDF)</a>
+                                                        <a href="Sunwoo_CV.pdf" class="button">CV (PDF)</a>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -90,7 +90,16 @@
 
 								<section>
 									<h2>News</h2>
+                                        <li>
+                                        Return offer for Applied Scientist internship accepted at Amazon Lab126 for Summer 2021!
+                                        </li>
                                     <ul class="link-list-news">
+                                        <li>
+                                        Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021.
+                                        </li>
+                                        <li>
+                                        A paper I co-authored, Personalized speech enhancement through self-supervised data augmentation and purification, was accepted for publication in Interspeech 2021.
+                                        </li>
                                         <li>
                                         Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
                                         </li>
