--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<ul class="big-image-list">
 										<li>
 											<a href="#">
-                                                <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
+                                                <img src="images/photo_cropped.jpg" alt="" class="left" />
                                             </a>
 										</li>
 									</ul>
