--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 												<ul class="link-list-cv">
 										            <li>
-                                                        <a href="Sunwoo_CV.pdf" class="button">CV (PDF)</a>
+                                                        <a href="New_CV_922.pdf" class="button">CV (PDF)</a>
                                                         </a>
                                                     </li>
                                                 </ul>
