--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
 								<section>
 									<h2>News</h2>
-                                        <li>
-                                        Return offer for Applied Scientist internship accepted at Amazon Lab126 for Summer 2021!
-                                        </li>
                                     <ul class="link-list-news">
+                                        <li>
+                                        Accepted return offer for Applied Scientist internship at Amazon Lab126 for Summer 2021!
+                                        </li>
                                         <li>
                                         Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021.
                                         </li>
@@ -104,13 +104,16 @@
                                         Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
                                         </li>
                                         <li>
+                                            Presented a virtual oral presentation of our Boosted Locality Hashing paper for ICASSP 2020. <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[session]</a>
+                                        </li>
+                                        <li>
                                         Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
                                         </li>
                                         <li>
                                         Interned at Qualcomm, 2019 Summer 2019. Worked on nonlinear echo cancellation.
                                         </li>
                                         <li>
-                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks.
+                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks. <a href="icassp2019postercopy.pdf">[poster]</a>            
                                         </li>
                                     </ul>
 								</section>
