--- a/publications.html
+++ b/publications.html
@@ -47,12 +47,15 @@
 									<h2>Publications</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                            <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
+                                            Aswin Sivaraman, <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2104.02018.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>Interspeech</i>, Brno, Czech Republic, Aug 30-Sep 3, 2021. 
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Haici Yang, Minje Kim, "<a href="https://ieeexplore.ieee.org/document/9053052">Boosted Locality Sensitive Hashing: Discriminative Binary Codes For Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Barcelona, Spain, May 4-8, 2020. [<a href="https://saige.sice.indiana.edu/research-projects/bwss-blsh/">Demo</a>, <a href="https://github.com/sunwookimiub/BLSH">Code</a>]
 
                                             <p><strong>[Nominated as the Best Student Paper]</strong></p>
+                                        </li>
+                                        <li>
+                                            <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a href="https://github.com/sunwookimiub/BGRU">Code</a>]
                                         </li>
                                     </ul>
 								</section>
