--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                         Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
                                         </li>
                                         <li>
-                                            Presented a virtual oral presentation of our Boosted Locality Hashing paper for ICASSP 2020. <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[session]</a>
+                                            Presented a virtual oral presentation of our Boosted Locality Hashing paper for ICASSP 2020. <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[session]</a> <a href="https://ieeexplore.ieee.org/document/9053052">[paper]</a>
                                         </li>
                                         <li>
                                         Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
