--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,11 @@
 									<h2>Publications</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                            Aswin Sivaraman, <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2104.02018.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>Interspeech</i>, Brno, Czech Republic, Aug 30-Sep 3, 2021. 
+                                            <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2105.03544.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, Oct 17-20, 2021. [<a href="https://github.com/kimsunwiub/PSE_ZeroShot_KD">Code</a>]
+                                        </li>
+                                        <li>
+                                            Aswin Sivaraman, <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2104.02018.pdf">Personalized Speech Enhancement through Self‑Supervised Data Augmentation and
+Purification</a>," in <i>Interspeech</i>, Brno, Czech Republic, Aug 30-Sep 3, 2021. 
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Haici Yang, Minje Kim, "<a href="https://ieeexplore.ieee.org/document/9053052">Boosted Locality Sensitive Hashing: Discriminative Binary Codes For Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Barcelona, Spain, May 4-8, 2020. [<a href="https://saige.sice.indiana.edu/research-projects/bwss-blsh/">Demo</a>, <a href="https://github.com/sunwookimiub/BLSH">Code</a>]
