--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                         Accepted return offer for Applied Scientist internship at Amazon Lab126 for Summer 2021!
                                         </li>
                                         <li>
-                                        Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021.
+                                        Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021. <a href="https://arxiv.org/pdf/2105.03544.pdf">[paper]</a>
                                         </li>
                                         <li>
                                         A paper I co-authored, Personalized speech enhancement through self-supervised data augmentation and purification, was accepted for publication in Interspeech 2021.
@@ -113,7 +113,7 @@
                                         Interned at Qualcomm, 2019 Summer 2019. Worked on nonlinear echo cancellation.
                                         </li>
                                         <li>
-                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks. <a href="icassp2019postercopy.pdf">[poster]</a>            
+                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks. <a href="icassp2019postercopy.pdf">[poster]</a> <a href="https://ieeexplore.ieee.org/abstract/document/8682595">[paper]</a>
                                         </li>
                                     </ul>
 								</section>
