--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
+                                PhD candidate in Intelligent Systems Engineering track in School of Informatics, Computing, and Engineering at Indiana University Bloomington. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor Prof. Minje Kim. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices.
 
 								<section>
 									<h2>News</h2>
