--- a/index.html
+++ b/index.html
@@ -107,28 +107,28 @@
 									<h2>News</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                        Accepted return offer for Applied Scientist internship at Amazon Lab126 for Summer 2021!
+                                        07/14/2021: Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021. <a href="https://arxiv.org/pdf/2105.03544.pdf">[paper]</a>
                                         </li>
                                         <li>
-                                        Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021. <a href="https://arxiv.org/pdf/2105.03544.pdf">[paper]</a>
+                                        06/02/2021: A paper I co-authored, Personalized speech enhancement through self-supervised data augmentation and purification, was accepted for publication in Interspeech 2021.
                                         </li>
                                         <li>
-                                        A paper I co-authored, Personalized speech enhancement through self-supervised data augmentation and purification, was accepted for publication in Interspeech 2021.
+                                        10/20/2020: Accepted return offer for Applied Scientist internship at Amazon Lab126 for Summer 2021!
                                         </li>
                                         <li>
-                                        Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
+                                            05/05/2020: Presented a virtual oral presentation of our Boosted Locality Hashing paper for ICASSP 2020. <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[session]</a> <a href="https://ieeexplore.ieee.org/document/9053052">[paper]</a>
                                         </li>
                                         <li>
-                                            Presented a virtual oral presentation of our Boosted Locality Hashing paper for ICASSP 2020. <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[session]</a> <a href="https://ieeexplore.ieee.org/document/9053052">[paper]</a>
+                                        01/24/2020: Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
                                         </li>
                                         <li>
-                                        Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
+                                        01/23/2020: Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
                                         </li>
                                         <li>
-                                        Interned at Qualcomm, 2019 Summer 2019. Worked on nonlinear echo cancellation.
+                                        08/16/2019: I concluded my exciting internship at Qualcomm for Summer 2019. It was an amazing experience collaborating with the Audio Algorithms team working on nonlinear echo cancellation.
                                         </li>
                                         <li>
-                                        Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks. <a href="icassp2019postercopy.pdf">[poster]</a> <a href="https://ieeexplore.ieee.org/abstract/document/8682595">[paper]</a>
+                                        05/17/2019: Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks. <a href="icassp2019postercopy.pdf">[poster]</a> <a href="https://ieeexplore.ieee.org/abstract/document/8682595">[paper]</a>
                                         </li>
                                     </ul>
 								</section>
