--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 Please check out my <a href="New_CV_922.pdf">CV</a> for more information. 
                                 <br>
                                 <br>
-                                In my leisure time, I mostly spend time with my two dogs, Mochi and Oliver, by going to nearby parks or nature trails. I also enjoy watching soccer, and I recently got into playing tennis.
+                                In my leisure time, I mostly spend time with my two dogs, Mochi and Oliver, going to nearby parks or nature trails, and I also enjoy watching soccer. Started getting into playing tennis recently!
                                 </section>
 
 								<section>
