--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 
 												<ul class="link-list-cv">
 										            <li>
+                                <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
+                                    <i style="font-size:48px" class="fa">&#xf08c;</i>
+                                </a>
+                                <a style="padding-left: .2cm" href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
+                                    <i style="font-size:48px" class="fa">&#xf0d4;</i>
+                                </a>
                                                         <a href="New_CV_922.pdf" class="button">CV (PDF)</a>
                                                         </a>
                                                     </li>
